--- a/public/registration/form2.html
+++ b/public/registration/form2.html
@@ -1,9 +1,10 @@
-<form class="registration hidden animate__animated" id="form2">
+<form class="registration hidden animate__animated" id="form2" next_form="registration/form3.html" input_name="student-number">
     <label for="student-number">Student number</label>
     <input type="number" required autocomplete="false" name="student-number" id="student-number" placeholder="000000000">
     
     <div class="button-container" style="width:100%">
-        <button type="submit" class="button button-short button-font-size primary-bg on-primary">Next</button>
-        <a class="button button-short button-font-size muted-bg on-muted">Back</a>
+        <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
+        <button onclick="window.history.go(-1);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
     </div>    
 </form>
+
