--- a/public/registration/form4.html
+++ b/public/registration/form4.html
@@ -1,9 +1,9 @@
-<form class="registration hidden animate__animated" id="form4">
+<form class="registration hidden animate__animated" id="form4" next_form="registration/form5.html" input_name="confirm-password">
     <label for="confirm-password">Confirm password</label>
     <input type="password" required autocomplete="false" name="confirm-password" id="confirm-password" placeholder="***">
-    
+    <span id="confirm-password-help" class="hidden secondary-text">Passwords do not match</span>
     <div class="button-container" style="width:100%">
-        <button type="submit" class="button button-short button-font-size primary-bg on-primary">Next</button>
-        <a class="button button-short button-font-size muted-bg on-muted">Back</a>
+        <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
+        <button onclick="window.history.go(-1);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
     </div>    
 </form>
