--- a/public/registration/form8.html
+++ b/public/registration/form8.html
@@ -1,7 +1,6 @@
-<form class="registration hidden animate__animated" id="form6" next_form="registration/form7.html" input_name="last_name">
-    <label for="last_name">Last name</label>
-    <input type="text" required autofocus autocomplete="true" name="last_name" id="last_name" placeholder="">
-    
+<form class="registration hidden animate__animated" id="form8" next_form="done" input_name="user_name">
+    <label for="user_name">Username</label>
+    <input type="text" required autofocus autocomplete="true" name="user_name" id="user_name" placeholder="">
     <div class="button-container" style="width:100%">
         <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
         <button onclick="window.history.go(-1);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
