fix for success page

--- a/public/registration/success.html
+++ b/public/registration/success.html
@@ -1,5 +1,5 @@
 <div style="width: 100%;text-align: center;">
-    <img src="src/assets/success.png" alt="" class="">
+    <img src="src/assets/success.png" alt="" class="full-width">
     <br>
     <br>
     <h3 class="tetiary-text">Account created successfuly</h3>
