--- a/public/registration.html
+++ b/public/registration.html
@@ -26,9 +26,11 @@
 }
   </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Kurale&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kurale&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
 
@@ -52,7 +54,7 @@
       <div class="icon"><img src="src/assets/h_icon.png" alt="" class="image-icon"></div>
       <div class="title fancy-text">Campus</div>
     </div>
-    <main class="mdc-typography roboto-font">
+    <main class="mdc-typography body-font">
       <div class="container form-container" id="page">
       </div>
       
@@ -60,7 +62,7 @@
     </main>
     <br>
     
-    <div class="footer roboto-font">
+    <div class="footer body-font">
       <div class="link-container">
           <div class="footer-section"><a href="#">Home</a></div>
           <div class="footer-section"><a href="#">About us</a></div>
