--- a/public/registration/form1.html
+++ b/public/registration/form1.html
@@ -1,7 +1,10 @@
 <form class="registration animate__animated hidden" id="form1" next_form="registration/form2.html" input_name="email">
+    <p>
     <label class="control-label" for="email">Email address</label>
     <input type="email" required autofocus autocomplete="email" name="email" id="email" placeholder="Type here...">
-    <span class="secondary-text hidden" id="email-help">Email address already in use by another account</span>
+    
+    
+    <span class="error-text hidden" id="email-help"><i>Email address already in use by another account</i></span>
     <br><br>
     <div class="button-container" style="width:100%">
         <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
