--- a/public/registration/options.html
+++ b/public/registration/options.html
@@ -4,10 +4,10 @@ margin-bottom: 40px;">
       <h1 class="mdc-typography--headline1">Create account</h1>
       <div class="options">
         <div class="touch-button">
-          <a href="#registration/form1.html" class="button primary-btn full-length button-font-size primary-bg on-primary">User account</a>
+          <button onclick="setAccountType('user');" class="button primary-btn full-length button-font-size primary-bg on-primary">User account</button>
         </div>
         <div class="touch-button">
-          <a class="button full-length button-font-size secondary-btn secondary-bg on-secondary">Business account</a>
+          <button onclick="setAccountType('business');" class="button full-length button-font-size secondary-btn secondary-bg on-secondary">Business account</button>
         </div>
       </div> 
       <section>
