--- a/public/registration/form3.html
+++ b/public/registration/form3.html
@@ -1,10 +1,10 @@
 <form class="registration hidden animate__animated" id="form3" next_form="registration/form4.html" input_name="student-number">
     <label for="student-number">Student number</label>
-    <input type="number" required autocomplete="false" name="student-number" id="student-number" placeholder="">
+    <input type="number" required autocomplete="false" name="student-number" id="student-number" placeholder="Type here...">
     
     <div class="button-container" style="width:100%">
         <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
-        <button onclick="window.history.go(-1);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
+        <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
     </div>    
 </form>
 
