--- a/public/registration/form5.html
+++ b/public/registration/form5.html
@@ -1,10 +1,10 @@
 <form class="registration hidden animate__animated" id="form5" next_form="registration/form6.html" input_name="last_name">
     <label for="last_name">Last name</label>
-    <input type="text" required autofocus autocomplete="true" name="last_name" id="last_name" placeholder="">
+    <input type="text" required autofocus autocomplete="true" name="last_name" id="last_name" placeholder="Type here...">
     
     <div class="button-container" style="width:100%">
         <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
-        <button onclick="window.history.go(-1);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
+        <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
     </div>    
 </form>
 
