--- a/public/registration/form6.html
+++ b/public/registration/form6.html
@@ -1,6 +1,6 @@
 <form class="registration hidden animate__animated" id="form6" next_form="done" input_name="phone_number">
     <label for="last-name">Phone number</label>
-    <input type="tel" required autofocus autocomplete="true" name="phone_number" id="phone_number" placeholder="">  
+    <input type="tel" required autofocus autocomplete="true" name="phone_number" id="phone_number" placeholder="Type here...">  
     <label class="label-container">I agree to the terms & conditions
         <input type="checkbox" id="terms-conditions">
         <span class="checkmark"></span>
@@ -8,7 +8,7 @@
       <br>
     <div class="button-container" style="width:100%">
         <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
-        <button onclick="window.history.go(-1);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
+        <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
     </div>    
 </form>
 
