--- a/public/registration/form6.html
+++ b/public/registration/form6.html
@@ -1,4 +1,4 @@
-<form class="registration hidden animate__animated" id="form6" next_form="done" input_name="phone_number">
+<form class="registration hidden animate__animated" id="form6" next_form="done-2" input_name="phone_number">
     <label for="last-name">Phone number</label>
     <input type="tel" required autofocus autocomplete="true" name="phone_number" id="phone_number" placeholder="Type here...">  
     <label class="label-container">I agree to the terms & conditions
