--- a/public/registration/form7.html
+++ b/public/registration/form7.html
@@ -1,13 +1,17 @@
-<form class="registration hidden animate__animated" id="form2" next_form="done-2" input_name="image_student_id">
+<form class="registration hidden animate__animated" id="form7" next_form="form8.html" input_name="image_student_id_image">
     <p>
     <label for="password">Image of student ID</label>
-    <input type="file" required autocomplete="false" name="image_student_id" id="image_student_id" accept="image/*"/>
+    <div class="select_image_button" onclick="saveLocalImg_student_id_image();">
+        <div class="image"><img src="src/assets/gallery.png" alt="" id="preview_student_id" class="form-image-preview"></div>
+       <div class="label">Open gallery</div>
+    </div>
+    <input type="text" class="hidden" id="check-box-1">
     </p>
    
     <span id="password-help" class="muted-text"><i>Only images are allowed</i></span>
     <br><br>
     <div class="button-container" style="width:100%">
-        <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
+        <button type="button" onclick="switchToP8();"  class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
         <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
     </div> 
      
