--- a/public/registration.html
+++ b/public/registration.html
@@ -58,9 +58,10 @@
     <div class="footer body-font">
       <div class="link-container">
           <div class="footer-section"><a href="#">Home</a></div>
-          <div class="footer-section"><a href="#">About us</a></div>
-          <div class="footer-section"><a href="#">Contact us</a></div>
-          <div class="footer-section"><a href="#">Terms & condtions</a></div>
+          <div class="footer-section"><a class="active" href="#">Login</a></div>
+          <div class="footer-section"><a href="#">About Us</a></div>
+          <div class="footer-section"><a href="#">Contact Us</a></div>
+          <div class="footer-section"><a href="#">Terms & Condtions</a></div>
       </div>
           <div class="copyright">©2021 Campus</div>
     </div>
