--- a/public/registration/success.html
+++ b/public/registration/success.html
@@ -2,7 +2,7 @@
     <img src="src/assets/success.png" alt="" class="full-width">
     <br>
     <br>
-    <h3 class="tetiary-text">Account created successfuly</h3>
+    <h3 class="tetiary-text">Operation completed successfuly</h3>
     <br>
     <div class="touch-button">
         <a href="#" class="button primary-btn full-length button-font-size primary-bg on-primary">Back Home</a>
