--- a/public/registration/emailPassword.html
+++ b/public/registration/emailPassword.html
@@ -1,18 +1,21 @@
 <div class="hidden animate__animated" id="options" style="width: 100%;
 margin-bottom: 40px;">
 <form class="registration animate__animated" id="form1" next_form="registration/form2.html" input_name="email">
-  <p class="greeting"><span class="icon">👋</span><br> Hi, Good afternoon</p>
-  <div class="input-container">
+  <p class="greeting"><span class="icon">👋</span><br> Hi! Good <span id="greetings-text"></span></p>
+  <div class="input-container animate__animated" id="email-container">
   <label class="control-label" for="email">Email address</label>
   <input type="email" required autofocus autocomplete="email" name="email" id="email" placeholder="Type here..."/>
-  <span class="error-text hidden" id="email-help"><i>Email address already in use by another account</i></span>
+  <span class="error-text hidden" id="email-error-text-1"><i>Email already exists</i></span>
+  <span class="error-text hidden" id="email-error-text-2"><i>Email doesn't exist</i></span>
+  <span class="error-text hidden" id="email-error-text-3"><i>Email not written properly</i></span>
   </div>
-  <div class="input-container">
+  <div class="input-container animate__animated" id="password-container">
     <label for="password">Password</label>
     <input type="password" required autocomplete="false" name="password" id="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" placeholder="Type here..."/>
     <span class="material-icons visibility" onclick="togglePassword();" state="hidden" id="togglePassword">
         visibility_off
         </span>
+        <span class="error-text hidden" id="password-error-text-1"><i>Incorrect password, <a href="#">Recover account?</a></i></span>
       </div>
   <br><br>
   <div class="button-container" style="width:100%">
