added password reset

--- a/public/registration/emailPassword.html
+++ b/public/registration/emailPassword.html
@@ -1,6 +1,5 @@
-<div class="hidden animate__animated" id="options" style="width: 100%;
-margin-bottom: 40px;">
-<form class="registration animate__animated" id="form1" next_form="registration/form2.html" input_name="email">
+
+<form class="registration animate__animated" id="registration" next_form="registration/form2.html" input_name="email">
   <p class="greeting"><span class="icon">👋</span><br> Hi! Good <span id="greetings-text"></span></p>
   <div class="input-container animate__animated" id="email-container">
   <label class="control-label" for="email">Email address</label>
@@ -12,15 +11,14 @@ margin-bottom: 40px;">
   <div class="input-container animate__animated" id="password-container">
     <label for="password">Password</label>
     <input type="password" required autocomplete="false" name="password" id="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" placeholder="Type here..."/>
-    <span class="material-icons visibility" onclick="togglePassword();" state="hidden" id="togglePassword">
+    <span class="material-icons visibility" onclick="window.togglePassword();" state="hidden" id="togglePassword">
         visibility_off
         </span>
-        <span class="error-text hidden" id="password-error-text-1"><i>Incorrect password, <a href="#">Recover account?</a></i></span>
+        <span class="error-text hidden" id="password-error-text-1"><i>Incorrect password, <a href="#registration/password-reset.html">Forgot password?</a></i></span>
       </div>
   <br><br>
   <div class="button-container" style="width:100%">
-      <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Register</button>
+      <button type="button" onclick="callCreateAccountAndVerifyEmail();" class="button button-short primary-btn button-font-size primary-bg on-primary">Register</button>
       <button type="button" onclick="callLogin();" class="button button-short button-font-size secondary-text">Login</button>
   </div>     
 </form>
-    </div>
