--- a/public/registration.html
+++ b/public/registration.html
@@ -58,6 +58,7 @@
     <div class="footer body-font">
       <div class="link-container">
           <div class="footer-section"><a href="#">Home</a></div>
+          <div class="footer-section"><a href="#registration/password-reset.html">Forgot paasword?</a></div>
           <div class="footer-section"><a class="active" href="#">Login</a></div>
           <div class="footer-section"><a href="#">About Us</a></div>
           <div class="footer-section"><a href="#">Contact Us</a></div>
@@ -72,6 +73,6 @@
         <script defer src="/__/firebase/9.6.1/firebase-firestore-compat.js"></script>
         <script defer src="/__/firebase/9.6.1/firebase-storage-compat.js"></script>
         <script defer src="/__/firebase/init.js?useEmulator=false"></script>
-        <script src="src/index.js" defer></script>
+        <script src="src/index.js" defer type="text/javascript"></script>
   </body>
 </html>
