--- a/public/registration/first-name.html
+++ b/public/registration/first-name.html
@@ -1,6 +1,9 @@
-<form class="registration hidden animate__animated" id="form4" next_form="registration/form5.html" input_name="first_name">
-    <label for="first-name">First name</label>
-    <input type="text" required autofocus autocomplete="true" name="first_name" id="first_name" placeholder="Type here...">
+<form class="registration hidden animate__animated" id="form4" next_form="registration/last-name.html" input_name="first_name">
+   <div>
+        <label for="first-name">First name</label>
+        <input type="text" required autofocus autocomplete="true" name="first_name" id="first_name" placeholder="Type here...">
+       </div>
+        <br>
     
     <div class="button-container" style="width:100%">
         <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
