--- a/public/registration/phone-number.html
+++ b/public/registration/phone-number.html
@@ -1,7 +1,7 @@
-<form class="registration hidden animate__animated" id="form5" next_form="registration/form6.html" input_name="last_name">
-    <label for="last_name">Last name</label>
-    <input type="text" required autofocus autocomplete="true" name="last_name" id="last_name" placeholder="Type here...">
-    
+<form class="registration hidden animate__animated" id="form6" next_form="registration/choose-account-type.html" input_name="phone_number">
+    <label for="last-name">Phone number</label>
+    <input type="tel" required autofocus autocomplete="true" name="phone_number" id="phone_number" placeholder="Type here...">  
+      <br>
     <div class="button-container" style="width:100%">
         <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
         <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
