--- a/public/registration/studentNumber.html
+++ b/public/registration/studentNumber.html
@@ -1,10 +1,10 @@
-<form class="registration hidden animate__animated" id="form3" next_form="registration/form4.html" input_name="student-number">
+<form class="registration hidden animate__animated" id="form3" next_form="registration/first-name.html" input_name="student-number">
     <label for="student-number">Student number</label>
     <input type="number" required autocomplete="false" name="student-number" id="student-number" placeholder="Type here...">
-    
+    <span class="muted-text"><i>Enter full Unza student ID</i></span>
+    <br>
     <div class="button-container" style="width:100%">
         <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
-        <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
-    </div>    
+    </div>  
 </form>
 
