--- a/public/registration/choose-account-type.html
+++ b/public/registration/choose-account-type.html
@@ -12,7 +12,7 @@
       <br>
     <div class="button-container" style="width:100%">
         <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
-        <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size on-muted">Back</button>
+        <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn on-muted">Back</button>
     </div>    
 </form>
 
