--- a/public/registration/first-name.html
+++ b/public/registration/first-name.html
@@ -6,7 +6,7 @@
         <br>
     
     <div class="button-container" style="width:100%">
-        <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
+        <button id="submit-btn" type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary disabled-btn">Next</button>
         <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
     </div>    
 </form>
