--- a/public/registration/image-student-id-image.html
+++ b/public/registration/image-student-id-image.html
@@ -15,7 +15,7 @@
     
     <div class="button-container" style="width:100%">
         <button type="button" onclick="switchToP8();"  class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
-        <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn muted-bg on-muted">Back</button>
+        <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn on-muted">Back</button>
     </div> 
      
 </form>
