--- a/public/registration/studentNumber.html
+++ b/public/registration/studentNumber.html
@@ -4,7 +4,7 @@
     <span class="muted-text"><i>Enter full Unza student ID</i></span>
     <br>
     <div class="button-container" style="width:100%">
-        <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
+        <button id="submit-btn" type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary disabled-btn">Next</button>
     </div>  
 </form>
 
