--- a/public/auth/password-reset.html
+++ b/public/auth/password-reset.html
@@ -3,14 +3,12 @@
     <p class="greeting"><span class="icon material-icons">lock</span><br>You're about to reset your password</p>
    <br>
       <label for="new-password">Enter new password</label>
-      <input type="password" required autocomplete="false" name="password" id="new-password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" placeholder="Type here..."/>
+      <input autofocus type="password" required autocomplete="false" name="password" id="new-password" placeholder="Type here..."/>
       <span class="material-icons visibility" onclick="window.togglePassword();" state="hidden" id="togglePassword">
           visibility_off
           </span>
-          <span class="muted-text" id="password-error-text-1">Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters</span>
-       
-    <br><br>
+          <div class="message error helper-text hidden" id="password-help-text">Password must be between 6 to 20 characters long and must contain at least one numeric digit, one uppercase and one lowercase letter</div>
     <div class="button-container" style="width:100%">
-        <button type="button" onclick="resetPassword();" class="button button-short primary-btn button-font-size primary-bg on-primary">Confirm</button>
+        <button id="change-password" type="button" onclick="resetPassword(document.getElementById('new-password'));" class="button button-short primary-btn button-font-size disabled-btn primary-bg on-primary">Confirm</button>
     </div>     
   </form>
