--- a/public/registration.html
+++ b/public/registration.html
@@ -14,6 +14,7 @@
   --animate-duration: 500ms;
   --animate-delay: 0.9s;
 }
+
   </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,15 +24,21 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
   </head>
   <body>
-    <div class="cover hidden body-font" id="cover">
-        <div class="progress-container">
+    <div class="cover body-font" id="cover">
+        <div class="progress-container hidden">
           <div class="progress">
             <div class="determinate" id="progres-bar"></div>
           </div>
           <div id="upload-helper-text"></div>
     </div>
+    <div class="progress-container-indeterminate">
+      <div class="progress">
+        <div class="indeterminate" id="indeterminate-progress-bar"></div>
+      </div>
+      <div id="upload-helper-text"></div>
+</div>
     </div>
-    <div class="spinner" id="spinner"></div> 
+    <!-- <div class="spinner" id="spinner"></div>  -->
 
     <div class="header">
       <div class="icon"><img src="src/assets/h_icon.png" alt="" class="image-icon"></div>
@@ -58,7 +65,6 @@
     <div class="footer body-font">
       <div class="link-container">
           <div class="footer-section"><a href="#">Home</a></div>
-          <div class="footer-section"><a href="#registration/password-reset.html">Forgot paasword?</a></div>
           <div class="footer-section"><a class="active" href="#">Login</a></div>
           <div class="footer-section"><a href="#">About Us</a></div>
           <div class="footer-section"><a href="#">Contact Us</a></div>
