--- a/public/registration/emailPassword.html
+++ b/public/registration/emailPassword.html
@@ -1,24 +1,32 @@
 
 <form class="registration animate__animated" id="registration" next_form="registration/form2.html" input_name="email">
   <p class="greeting"><span class="icon">👋</span><br> Hi! Good <span id="greetings-text"></span></p>
-  <div class="input-container animate__animated" id="email-container">
-  <label class="control-label" for="email">Email address</label>
-  <input type="email" required autofocus autocomplete="email" name="email" id="email" placeholder="Type here..."/>
-  <span class="error-text hidden" id="email-error-text-1"><i>Email already exists</i></span>
-  <span class="error-text hidden" id="email-error-text-2"><i>Email doesn't exist</i></span>
-  <span class="error-text hidden" id="email-error-text-3"><i>Email not written properly</i></span>
+  <div class="message error hidden animate__animated" id="email-password-error">
+    <i class="material-icons">error</i>You entered an incorrect email or password
   </div>
-  <div class="input-container animate__animated" id="password-container">
-    <label for="password">Password</label>
-    <input type="password" required autocomplete="false" name="password" id="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" placeholder="Type here..."/>
-    <span class="material-icons visibility" onclick="window.togglePassword();" state="hidden" id="togglePassword">
-        visibility_off
-        </span>
-        <span class="error-text hidden" id="password-error-text-1"><i>Incorrect password, <a href="#registration/password-reset.html">Forgot password?</a></i></span>
-      </div>
-  <br><br>
-  <div class="button-container" style="width:100%">
-      <button type="button" onclick="callCreateAccountAndVerifyEmail();" class="button button-short primary-btn button-font-size primary-bg on-primary">Register</button>
-      <button type="button" onclick="callLogin();" class="button button-short button-font-size secondary-text">Login</button>
+  <div class="message error hidden animate__animated" id="user-exists">
+    <i class="material-icons">error</i>Email address already taken
+  </div>
+  <div class="animate_animated" id="email-password-container">
+    <div class="input-container" id="email-container">
+ <label class="control-label" for="email">Email address</label>
+ <input type="email" required autofocus="" autocomplete="email" name="email" id="email" placeholder="Type here...">
+ <div class="message error helper-text hidden" id="email-help-text">Please enter a valid email address</div>
+ </div>
+ <div class="input-container" id="password-container">
+   <label for="password">Password</label>
+   <input type="password" disabled class="animate_animated" required="" autocomplete="false" name="password" id="password" title="Password must be between 6 to 20 characters long and must contain at least one numeric digit, one uppercase and one lowercase letter" placeholder="Type here...">
+   <span class="material-icons visibility" onclick="window.togglePassword();" state="hidden" id="togglePassword">
+       visibility_off
+       </span>
+       <div class="message error helper-text hidden" id="password-help-text">Password must be between 6 to 20 characters long and must contain at least one numeric digit, one uppercase and one lowercase letter</div>
+     </div>
+</div>
+<div><a href="#registration/password-reset.html" style="
+  color: #2f6dd7 !important;
+">Forgot password?</a></div>
+  <div class="button-container">
+      <button type="button" onclick="callCreateAccountAndVerifyEmail(document.getElementById('email'), document.getElementById('password'));" class="button disabled-btn button-short primary-btn button-font-size">Register</button>
+      <button type="button" onclick="callLogin();" class="button disabled-outline secondary-btn-outline button-short button-font-siz">Login</button>
   </div>     
 </form>
