--- a/public/registration/password-reset.html
+++ b/public/registration/password-reset.html
@@ -1,10 +1,10 @@
-<form class="registration hidden animate__animated" id="password-reset" next_form="registration/phone-number.html" input_name="last_name">
+<form class="registration hidden animate__animated" id="password-reset" input_name="email">
     <p class="greeting"><span class="icon material-icons">email</span><br>Please confirm the email address for your account.</p>
-    <label for="last_name">Email address</label>
+    <label for="email">Email address</label>
     <input type="email" required autofocus autocomplete="email" name="email" id="email" placeholder="Type here...">
-<br>
-<div class="button-container" style="width:100%">
-    <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Confirm</button>
-    <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size on-muted">Back</button>
+    <div class="message error helper-text hidden" id="email-help-text">Please enter a valid email address</div>
+<div class="button-container">
+    <button  id="submit-btn" type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary disabled-btn">Confirm</button>
+    <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn on-muted">Back</button>
 </div>    
 </form>
