--- a/public/auth/index.html
+++ b/public/auth/index.html
@@ -168,7 +168,7 @@ function getParameterByName(urli, valueNeeded){
     <form class="registration">
     <div class="message success"><i class="material-icons">check_circle</i>Your email address has been verified click
       <div class="button-container">
-        <button id="email-btn" href="../registration/studentNumber.html" class="button button-short button-font-size">Continue</button>
+        <button id="email-btn" href="../registration.html#registration/studentNumber.html" class="button button-short button-font-size">Continue</button>
         </div>
       </div>
       </form>`;
