fixed more bugs

--- a/public/registration.html
+++ b/public/registration.html
@@ -25,13 +25,13 @@
   </head>
   <body>
     <div class="cover body-font" id="cover">
-        <div class="progress-container hidden">
+        <div class="progress-container hidden" id="progress-container">
           <div class="progress">
             <div class="determinate" id="progres-bar"></div>
           </div>
           <div id="upload-helper-text"></div>
     </div>
-    <div class="progress-container-indeterminate">
+    <div class="progress-container-indeterminate" id="progress-container-indeterminate">
       <div class="progress">
         <div class="indeterminate" id="indeterminate-progress-bar"></div>
       </div>
