--- a/public/registration/choose-account-type.html
+++ b/public/registration/choose-account-type.html
@@ -3,7 +3,7 @@
         <label for="account-type" style="font-weight: 500;">Choose account type</label>
         <br>
         <br>
-        <input type="radio" id="user" name="account-type" selected value="user">
+        <input type="radio" id="user" name="account-type" value="user">
         <label for="user">User account</label><br>
         <input type="radio" id="business" name="account-type" value="business">
         <label for="business">Business account</label><br> 
