--- a/public/registration/image-student-id-image.html
+++ b/public/registration/image-student-id-image.html
@@ -14,7 +14,7 @@
     </div>
     
     <div class="button-container" style="width:100%">
-        <button type="button" onclick="switchToP8();"  class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
+        <button id="submit-btn" type="button" onclick="switchToP8();"  class="button button-short primary-btn button-font-size primary-bg on-primary disabled-btn">Next</button>
         <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn on-muted">Back</button>
     </div> 
      
