--- a/public/registration/passport-size-photo.html
+++ b/public/registration/passport-size-photo.html
@@ -11,7 +11,7 @@
     <span id="help" class="muted-text"><i>Photo of student ID must match with your passport size photo</i></span>
     <br><br>
     <div class="button-container" style="width:100%">
-        <button id="submit-btn" type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary">Next</button>
+        <button id="submit-btn" type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary disabled-btn">Next</button>
         <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn  on-muted">Back</button>
     </div> 
      
