--- a/public/registration/phone-number.html
+++ b/public/registration/phone-number.html
@@ -3,7 +3,7 @@
     <input type="tel" required autofocus autocomplete="true" name="phone_number" id="phone_number" placeholder="Type here...">  
       <br>
     <div class="button-container" style="width:100%">
-        <button type="submit" class="button button-short primary-btn button-font-size primary-bg on-primary disabled-btn">Next</button>
+        <button type="submit" id="submit-btn" class="button button-short primary-btn button-font-size primary-bg on-primary disabled-btn">Next</button>
         <button type="button" onclick="window.history.go(-2);" class="button button-short button-font-size muted-btn on-muted">Back</button>
     </div>    
 </form>
