--- a/public/index.html
+++ b/public/index.html
@@ -1,75 +1,49 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-    <link rel="stylesheet" href="src/reset.css">
+    <title>Campus-Signup</title>
     <link rel="stylesheet" href="src/style.css">
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.6.1/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <!-- <script defer src="/__/firebase/9.6.1/firebase-auth-compat.js"></script> -->
-    <script defer src="/__/firebase/9.6.1/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/9.6.1/firebase-firestore-compat.js"></script>
-    <!-- <script defer src="/__/firebase/9.6.1/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/9.6.1/firebase-messaging-compat.js"></script> -->
-    <script defer src="/__/firebase/9.6.1/firebase-storage-compat.js"></script>
-    <!-- <script defer src="/__/firebase/9.6.1/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/9.6.1/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/9.6.1/firebase-performance-compat.js"></script> -->
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    <!-- <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  /> -->
+  <style>
+      :root {
+  --animate-duration: 500ms;
+  --animate-delay: 0.9s;
+}
 
-    
+  </style>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kurale&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">  -->
   </head>
   <body>
-    <div class="header">
-      <div class="icon-container"><img src="assets/icon.png" alt="" class="src"></div>
-      <div class="text-container">Campus</div>
-    </div>
-    <!-- <p id="load">Firebase SDK Loading&hellip;</p> -->
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
+    <header class="body-font">
+      <div class="icon-container"><img src="src/assets/h_icon.png" alt="" class="image-icon"></div>
+      <div class="title fancy-text">Campus</div>
+      <div class="items">
+        <div><a href="#">Login</a></div>
+          <div class="on-laptop-up"><a href="#">Sign Up</a></div>
+          <div class="on-laptop-up"><a href="#">About</a></div>
+          <div class="on-laptop-up"><a href="#">Feed back</a></div>
+          <div class="on-laptop-down"><a href="#">M</a></div>
+        </div>
+          
+    </header>
+ 
+        <!-- update the version number as needed -->
+        <!-- <script defer src="/__/firebase/9.6.1/firebase-app-compat.js"></script>
+        <script defer src="/__/firebase/9.6.1/firebase-auth-compat.js"></script>
+        <script defer src="/__/firebase/9.6.1/firebase-database-compat.js"></script>
+        <script defer src="/__/firebase/9.6.1/firebase-firestore-compat.js"></script>
+        <script defer src="/__/firebase/9.6.1/firebase-storage-compat.js"></script>
+        <script defer src="/__/firebase/init.js?useEmulator=false"></script> -->
+        <script src="src/home.js" defer type="text/javascript"></script>
   </body>
 </html>
