updated herder in registration.html

--- a/public/registration.html
+++ b/public/registration.html
@@ -40,10 +40,17 @@
     </div>
     <!-- <div class="spinner" id="spinner"></div>  -->
 
-    <div class="header">
-      <div class="icon"><img src="src/assets/h_icon.png" alt="" class="image-icon"></div>
+    <header class="body-font">
+      <div class="icon-container"><img src="src/assets/h_icon.png" alt="" class="image-icon"></div>
       <div class="title fancy-text">Campus</div>
-    </div>
+      <div class="items">
+        <div><a href="#">Login</a></div>
+          <div class="on-laptop-up"><a href="#">Sign Up</a></div>
+          <div class="on-laptop-up"><a href="#">About</a></div>
+          <div class="on-laptop-up"><a href="#">Feed back</a></div>
+          <div class="on-laptop-down"><a href="#">M</a></div>
+        </div>
+    </header>
     <main class="mdc-typography body-font">
       <div class="side-image" id="side-image">
         <div class="side-wraper">
