made v1 of back-drop

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">  -->
   </head>
-  <body>
-    <header class="body-font">
+  <body class="body-font">
+    <header>
       <div class="icon-container"><img src="src/assets/h_icon.png" alt="" class="image-icon"></div>
       <div class="title fancy-text">Campus</div>
       <div class="items">
@@ -35,6 +35,16 @@
           <div class="on-laptop-down"><a href="#">M</a></div>
         </div>
     </header>
+    <div id="back-drop" style="background-image: url('src/assets/morning.jpg');">
+        <div class="child">Hello friend!</div>
+        <div class="child">
+            <div id="search-box">
+                <div>🔍</div>
+                <div style="text-align: left;">What are you looking for?</div>
+            </div>
+        </div>
+
+    </div>
  
         <!-- update the version number as needed -->
         <!-- <script defer src="/__/firebase/9.6.1/firebase-app-compat.js"></script>
