done with back drop

--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
 }
 
   </style>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kurale&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">  -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
   </head>
   <body class="body-font">
     <header>
@@ -32,15 +32,17 @@
           <div class="on-laptop-up"><a href="#">Sign Up</a></div>
           <div class="on-laptop-up"><a href="#">About</a></div>
           <div class="on-laptop-up"><a href="#">Feed back</a></div>
-          <div class="on-laptop-down"><a href="#">M</a></div>
+          <div class="on-laptop-down"><a href="#"><i class="material-icons">menu</i></a></div>
         </div>
     </header>
-    <div id="back-drop" style="background-image: url('src/assets/morning.jpg');">
-        <div class="child">Hello friend!</div>
+    <div id="back-drop">
+        <div class="child" style="font-weight: 500;padding-bottom: 20px;">Hello friend!</div>
         <div class="child">
             <div id="search-box">
-                <div>🔍</div>
-                <div style="text-align: left;">What are you looking for?</div>
+                <div><i class="material-icons">search</i></div>
+                <div style="text-align: left;">
+                    What are you looking for?
+                </div>
             </div>
         </div>
 
