--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,10 @@
                 </div>
             </div>
         </div>
+        <button type="button" class="icon-button">
+          <span class="material-icons">shopping_cart</span>
+          <span class="icon-button__badge">9</span>
+       </button>
 
     </div>
  
