--- a/public/index.html
+++ b/public/index.html
@@ -38,9 +38,9 @@
           <div class="on-laptop-up"><a href="#">Sign Up</a></div>
           <div class="on-laptop-up"><a href="#">About</a></div>
           <div class="on-laptop-up"><a href="#">Feed back</a></div>
-          <div class="on-laptop-down"><a href="#"><!--🔍--><i class="material-icons">search</i></a></div>
-          <div class="on-laptop-down"><a href="#"><!--🙍‍♀️--><i class="material-icons">account_circle</i></a></div>
-          <div class="on-laptop-down"><a href="#"><!--📝--><i class="material-icons">menu</i></a></div>
+          <div class="on-laptop-down"><a href="#">🔍<!--<i class="material-icons">search</i>--></a></div>
+          <div class="on-laptop-down"><a href="#">🙍‍♀️<!--<i class="material-icons">account_circle</i>--></a></div>
+          <div class="on-laptop-down"><a href="#">📝<!--<i class="material-icons">menu</i>--></a></div>
         </div>
           <div></div>
 
