Updated the header

--- a/public/registration.html
+++ b/public/registration.html
@@ -40,7 +40,7 @@
     </div>
     <!-- <div class="spinner" id="spinner"></div>  -->
 
-    <header class="body-font">
+    <header class="body-font hidden">
       <div class="icon-container"><img src="src/assets/h_icon.png" alt="" class="image-icon"></div>
       <div class="title fancy-text">Campus</div>
       <div class="items">
