added the footer. style is in the newfooter file.

--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,20 @@
   </div>
   
 </main>
+<footer>
+  <h1>Campus</h1>
+  <nav>
+      <ul class="list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Logout</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+      </ul>
+     
+  </nav>
+  <p>&copy;Campus2022</p>
+
+</footer>
 
 
     <!-- <button type="button" class="icon-button">
